--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,12 @@ go:
 
 install:
   - go get -u github.com/golang/dep/cmd/dep
-  - go get -u github.com/golang/lint/golint
   - dep ensure
 
 before_script:
   - go vet
-  - golint -set_exit_status
+  - go build ./vendor/github.com/golang/lint/golint
+  - ./golint -set_exit_status
 
 script:
   - go test -v
