--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,7 @@ jobs:
     working_directory: /go/src/github.com/y-yagi/jpcal
 
     steps:
+      - checkout
       - run:
           name: Run ci-dep-update
           command: |
@@ -40,10 +41,10 @@ workflows:
   build:
     jobs:
       - build
-  nightly:
+  scheduled-workflow:
     triggers:
       - schedule:
-          cron: "00 7 * * *"
+          cron: "0 1 * * *"
           filters:
             branches:
               only: master
