Run megacheck in CI
For check deprecated.

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -1,4 +1,4 @@
-required = ["github.com/golang/lint/golint"]
+required = ["github.com/golang/lint/golint", "honnef.co/go/tools/cmd/megacheck"]
 
 [[constraint]]
   name = "github.com/fatih/color"
