--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,6 +35,14 @@ jobs:
     working_directory: /go/src/github.com/y-yagi/jpcal
     <<: *test
 
+  go-1.12-test:
+    docker:
+      - image: circleci/golang:1.12
+        environment:
+          GO111MODULE: "on"
+    working_directory: /go/src/github.com/y-yagi/jpcal
+    <<: *test
+
   modules-update:
     docker:
       - image: circleci/golang:1.11
@@ -57,6 +65,7 @@ workflows:
   build:
     jobs:
       - go-1.11-test
+      - go-1.12-test
   scheduled-workflow:
     triggers:
       - schedule:
