--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ test: &test
 jobs:
   go-1.11-test:
     docker:
-      - image: circleci/golang:1.11
+      - image: golang:1.11-stretch
         environment:
           GO111MODULE: "on"
     working_directory: /go/src/github.com/y-yagi/jpcal
@@ -37,7 +37,7 @@ jobs:
 
   go-1.12-test:
     docker:
-      - image: circleci/golang:1.12
+      - image: golang:1.12-stretch
         environment:
           GO111MODULE: "on"
     working_directory: /go/src/github.com/y-yagi/jpcal
@@ -45,7 +45,7 @@ jobs:
 
   modules-update:
     docker:
-      - image: circleci/golang:1.11
+      - image: golang:1.11-stretch
         environment:
           GO111MODULE: "on"
     working_directory: /go/src/github.com/y-yagi/jpcal
