--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ test: &test
     - run:
         name: Run lint
         command: |
-          go get -u github.com/golang/lint/golint
+          go get -u golang.org/x/lint/golint
           golint -set_exit_status $(go list ./... | grep -v /vendor/)
     - run:
         name: Run staticcheck
